Reduced duplicate code, removed some possible bugs